# sqlalchemy-sandbox

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
sqlalchemy_sandbox/app/: default_settings.py  factory.py  models.py
tests/app/: test_models.py
