[tool.poetry]
name = "sqlalchemy-sandbox"
version = "0.1.0"
description = ""
authors = ["John Diego <john@hazelanalytics.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.3"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
pytest-mock = "^3.5.1"
flake8 = "^3.8.4"
mypy = "^0.800"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
